--- a/index.html
+++ b/index.html
@@ -61,18 +61,18 @@
       { name: "Ust Syahid", phone: "60145430837" },
       { name: "Fahmi", phone: "60139586345" },
       { name: "Syamil", phone: "60105272343" },
-      { name: "Irfan", phone: "601125417866" },
+      { name: "Irfan", phone: "601125417686" },
       { name: "Akir", phone: "60179141798" },
       { name: "Ust Marwan", phone: "60148413672" },
       { name: "Salam", phone: "601135385636" },
-      { name: "Ust Syauqi", phone: "6013927875" },
+      { name: "Ust Syauqi", phone: "6013972875" },
       { name: "Ust Syed Zuhairi", phone: "60145162481" },
       { name: "Sepu", phone: "60199398185" },
       { name: "Haziq", phone: "60133325388" },
       { name: "Saiful", phone: "601112907323" },
-      { name: "Faiz Mirang", phone: "60139969738" },
+      { name: "Faiz", phone: "60139969738" },
       { name: "Ishak", phone: "60196728371" },
-      { name: "Hadi", phone: "6014819504" },
+      { name: "Hadi", phone: "60148195048" },
       { name: "Azam", phone: "60138855863" },
       { name: "Nafizi", phone: "601132544142" },
       { name: "Man", phone: "60137262293" },
